--- a/asr-ui/src/index.css
+++ b/asr-ui/src/index.css
@@ -36,6 +36,7 @@ h1 {
 }
 
 button {
+  margin: 20px;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -63,6 +64,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #cdcbcb;
   }
 }
